# CPP-Example-WASM

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  index.html
.conan-profile/: clang  emscripten
.devcontainer/: Dockerfile  devcontainer.json
http/: Dockerfile  nginx.conf
http/sources/: index.html
src/: CMakeLists.txt  calculator-interface.cpp  calculator-interface.hpp  hello-world.cpp  image-engine.cpp  main.cpp
src/utils/: calculator.cpp  calculator.hpp
test/: CMakeLists.txt  calculator_test.cpp
